<resources>
    <string name="app_name">Retail Accounting</string>

    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>

    <!-- Rationale for asking for Contacts -->
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>

    <!-- Strings related to home -->
    <string name="title_activity_home">Phones</string>
    <string name="phone_item_label_imei">IMEI:</string>
    <string name="phone_item_label_receive_date">Receive:</string>
    <string name="phone_item_label_sold_date">Sold:</string>
    <string name="phone_item_label_not_sold">Not sold yet</string>
    <string name="error_loading">Error while loading: %1$s</string>

    <!-- Strings related to Add/Edit phone -->
    <string name="title_add_phone">Add phone</string>
    <string name="title_edit_phone">Edit phone</string>
    <string name="hint_brand">Brand</string>
    <string name="hint_model">Model</string>
    <string name="hint_imei">IMEI</string>
    <string name="label_receive_date">Receive date</string>
    <string name="label_sold_date">Sold date</string>
    <string name="label_not_sold">Not sold yet</string>
    <string name="phone_error_not_correct_imei">Imei is not correct</string>
    <string name="phone_error_error_scan_barcode">Scanned barcode: %1$s is not correct</string>
    <string name="phone_date_pattern">EEE, dd MMM  yyyy</string>
    <string name="phone_error_empty_brand">Brand can\'t be empty!</string>
    <string name="phone_error_empty_model">Model can\'t be empty!</string>
    <string name="phone_error_empty_imei">Imei can\'t be empty!</string>
    <string name="phone_error_already_exists">Phone with imei: %1$s is already in Firebase!</string>
    <string name="phone_error_firebase_exception">Can\'t save phone. Reason: %1$s</string>
    <string name="dialog_title_photo">Replace photo</string>
    <string name="dialog_content_photo">Phone already has photo. Do you want to replace it?</string>
    <string name="dialog_title_delete">Delete phone</string>
    <string name="dialog_content_delete">Do you want to delete phone: %1$s - %2$s?</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="mandatory_field">Mandatory field!</string>
    <string name="invalid_email">Please provide a valid email address!</string>
    <string name="firebase_error_invalid_email">The specified email address is incorrect.</string>
    <string name="firebase_error_invalid_password">The specified password is incorrect.</string>
    <string name="firebase_error_disconnected">The operation had to be aborted due to a network disconnect</string>
    <string name="firebase_error_network_error">The operation could not be performed due to a network error</string>
    <string name="firebase_error_unknown_error">Unknown error</string>
    <string name="firebase_error_user_does_not_exist">The specified user does not exist.</string>

    <!-- Strings related to barcode scanner -->
    <string name="title_activity_custom_scanner">CustomScannerActivity</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>

</resources>
