<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="phoneViewModel"
            type="by.cooper.android.retailaccounting.viewmodel.PhoneViewModel"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_layout_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="@dimen/app_bar_layout_elevation">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="@dimen/collapsing_toolbar_layout_title_margin_end"
                app:expandedTitleMarginStart="@dimen/collapsing_toolbar_layout_title_margin_start"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways"/>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/brand_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:error="@{phoneViewModel.brandError}">

                        <AutoCompleteTextView
                            android:id="@+id/brand_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:afterTextChanged="@{phoneViewModel.onBrandChanged}"
                            android:completionThreshold="@integer/autocomplete_threshold"
                            android:ems="@integer/edit_text_ems"
                            android:hint="@string/hint_brand"
                            android:maxLines="@integer/edit_text_max_lines"
                            android:onItemClick="@{phoneViewModel.onBrandItemClick}"
                            android:singleLine="true"
                            android:text="@{phoneViewModel.brand}"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/model_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:error="@{phoneViewModel.modelError}">

                        <AutoCompleteTextView
                            android:id="@+id/model_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:afterTextChanged="@{phoneViewModel.onModelChanged}"
                            android:completionThreshold="@integer/autocomplete_threshold"
                            android:ems="@integer/edit_text_ems"
                            android:hint="@string/hint_model"
                            android:maxLines="@integer/edit_text_max_lines"
                            android:onItemClick="@{phoneViewModel.onModelItemClick}"
                            android:singleLine="true"
                            android:text="@{phoneViewModel.model}"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.percent.PercentRelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/imei_input_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:error="@{phoneViewModel.imeiError}"
                            app:layout_widthPercent="80%">

                            <EditText
                                android:id="@+id/imei_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:afterTextChanged="@{phoneViewModel.onImeiChanged}"
                                android:ems="@integer/edit_text_ems"
                                android:hint="@string/hint_imei"
                                android:inputType="number"
                                android:maxLength="@integer/imei_edit_text_max_length"
                                android:maxLines="@integer/edit_text_max_lines"
                                android:singleLine="true"
                                android:text="@{phoneViewModel.imei}"/>

                        </android.support.design.widget.TextInputLayout>

                        <ImageView
                            android:id="@+id/barcode_image_view"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignBottom="@id/imei_input_layout"
                            android:layout_toRightOf="@id/imei_input_layout"
                            android:onClick="@{phoneViewModel.onBarcodeClick}"
                            android:src="@drawable/ic_barcode_black_48dp"
                            app:layout_widthPercent="20%"/>

                    </android.support.percent.PercentRelativeLayout>
                </LinearLayout>

                <View style="@style/HorizontalDivider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <android.support.percent.PercentRelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/edit_date_percent_layout_vertical_margin"
                        android:paddingLeft="@dimen/edit_date_percent_layout_horizontal_margin"
                        android:paddingRight="@dimen/edit_date_percent_layout_horizontal_margin"
                        android:paddingTop="@dimen/edit_date_percent_layout_vertical_margin">

                        <ImageView
                            android:id="@+id/receive_date_image_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:onClick="@{phoneViewModel.onDateClick}"
                            android:src="@drawable/ic_calendar_today_black_36dp"
                            app:layout_widthPercent="17%"/>

                        <TextView
                            android:id="@+id/receive_date_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@id/receive_date_image_view"
                            android:padding="@dimen/edit_date_text_padding"
                            android:text="@string/label_receive_date"
                            android:textColor="@android:color/black"
                            app:layout_widthPercent="50%"/>

                        <TextView
                            android:id="@+id/receive_date_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_below="@id/receive_date_label"
                            android:layout_toRightOf="@id/receive_date_image_view"
                            android:padding="@dimen/edit_date_text_padding"
                            android:text="@{phoneViewModel.receiveDate}"
                            app:layout_widthPercent="50%"/>

                    </android.support.percent.PercentRelativeLayout>

                    <android.support.percent.PercentRelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/edit_date_percent_layout_vertical_margin"
                        android:paddingLeft="@dimen/edit_date_percent_layout_horizontal_margin"
                        android:paddingRight="@dimen/edit_date_percent_layout_horizontal_margin"
                        android:paddingTop="@dimen/edit_date_percent_layout_vertical_margin">

                        <ImageView
                            android:id="@+id/sold_date_image_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:onClick="@{phoneViewModel.onDateClick}"
                            android:src="@drawable/ic_calendar_black_36dp"
                            app:layout_widthPercent="17%"/>

                        <TextView
                            android:id="@+id/sold_date_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@id/sold_date_image_view"
                            android:padding="@dimen/edit_date_text_padding"
                            android:text="@string/label_sold_date"
                            android:textColor="@android:color/black"
                            app:layout_widthPercent="67%"/>

                        <TextView
                            android:id="@+id/sold_date_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_below="@id/sold_date_label"
                            android:layout_toRightOf="@id/sold_date_image_view"
                            android:padding="@dimen/edit_date_text_padding"
                            android:text="@{phoneViewModel.soldDate}"
                            app:layout_widthPercent="67%"/>

                        <ImageView
                            android:id="@+id/delete_sold_date_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@id/sold_date_text"
                            android:onClick="@{phoneViewModel.onSoldDeleteClick}"
                            android:src="@drawable/ic_close_black_24dp"
                            app:layout_widthPercent="10%"/>
                    </android.support.percent.PercentRelativeLayout>
                </LinearLayout>

                <View style="@style/HorizontalDivider"/>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/floating_action_button_margin"
            android:layout_marginEnd="@dimen/floating_action_button_margin"
            android:layout_marginRight="@dimen/floating_action_button_margin"
            android:onClick="@{phoneViewModel.onPhotoFabClick}"
            android:src="@drawable/ic_camera_alt_white_24dp"
            app:borderWidth="@dimen/floating_action_button_border_width"
            app:elevation="@dimen/floating_action_button_elevation"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|right|end"
            app:pressedTranslationZ="@dimen/floating_action_button_pressed_translation_z"/>

    </android.support.design.widget.CoordinatorLayout>
</layout>