<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="phoneCardViewModel"
            type="by.cooper.android.retailaccounting.viewmodel.PhoneCardViewModel"/>

    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        card_view:cardCornerRadius="@dimen/phone_item_card_view_corner_radius"
        card_view:cardElevation="@dimen/phone_item_card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/brand_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/phone_item_title_horizontal_margin"
                    android:layout_marginRight="@dimen/phone_item_title_horizontal_margin"
                    android:layout_marginTop="@dimen/phone_item_title_vertical_margin"
                    android:padding="@dimen/phone_item_title_padding"
                    android:text="@{phoneCardViewModel.phoneBrand}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/phone_item_title_brand_text_size"/>

                <TextView
                    android:id="@+id/model_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/brand_text_view"
                    android:layout_marginBottom="@dimen/phone_item_title_vertical_margin"
                    android:layout_marginLeft="@dimen/phone_item_title_horizontal_margin"
                    android:layout_marginRight="@dimen/phone_item_title_horizontal_margin"
                    android:padding="@dimen/phone_item_title_padding"
                    android:text="@{phoneCardViewModel.phoneModel}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/phone_item_title_model_text_size"/>

            </RelativeLayout>

            <View style="@style/HorizontalDivider"/>

            <RelativeLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/labels_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical"
                    android:padding="@dimen/phone_item_content_layout_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/phone_item_content_label_padding"
                        android:text="@string/phone_item_label_imei"
                        android:textSize="@dimen/phone_item_content_label_text_size"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/phone_item_content_label_padding"
                        android:text="@string/phone_item_label_receive_date"
                        android:textSize="@dimen/phone_item_content_label_text_size"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/phone_item_content_label_padding"
                        android:text="@string/phone_item_label_sold_date"
                        android:textSize="@dimen/phone_item_content_label_text_size"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phone_content_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/labels_layout"
                    android:layout_alignTop="@id/labels_layout"
                    android:layout_toLeftOf="@+id/vertical_divider"
                    android:layout_toRightOf="@id/labels_layout"
                    android:orientation="vertical"
                    android:padding="@dimen/phone_item_content_layout_padding">

                    <TextView
                        android:id="@+id/imei_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/phone_item_content_label_padding"
                        android:text="@{phoneCardViewModel.phoneImei}"
                        android:textSize="@dimen/phone_item_content_label_text_size"/>

                    <TextView
                        android:id="@+id/receive_date_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/phone_item_content_label_padding"
                        android:text="@{phoneCardViewModel.phoneReceiveDate}"
                        android:textSize="@dimen/phone_item_content_label_text_size"/>

                    <TextView
                        android:id="@+id/sold_date_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/phone_item_content_label_padding"
                        android:text="@{phoneCardViewModel.phoneSold ? phoneCardViewModel.phoneSoldDate : @string/phone_item_label_not_sold}"
                        android:textSize="@dimen/phone_item_content_label_text_size"/>

                </LinearLayout>

                <View
                    android:id="@+id/vertical_divider"
                    style="@style/VerticalDivider"
                    android:layout_alignBottom="@id/labels_layout"
                    android:layout_alignTop="@id/labels_layout"
                    android:layout_toLeftOf="@+id/phone_image_layout"/>

                <LinearLayout
                    android:id="@+id/phone_image_layout"
                    android:layout_width="@dimen/phone_item_image_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/labels_layout"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/labels_layout"
                    android:orientation="vertical"
                    android:padding="@dimen/phone_item_content_layout_padding">

                    <ImageView
                        android:id="@+id/phone_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:imageUrl="@{phoneCardViewModel.imageUrl}"
                        android:placeHolder="@{@drawable/placeholder_phone}"/>

                </LinearLayout>

            </RelativeLayout>

            <View style="@style/HorizontalDivider"/>

            <RelativeLayout
                android:id="@+id/actions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/delete_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/phone_item_action_horizontal_margin"
                    android:layout_marginRight="@dimen/phone_item_action_horizontal_margin"
                    android:onClick="@{phoneCardViewModel.onDeleteClick}"
                    android:padding="@dimen/phone_item_action_padding"
                    android:src="@drawable/ic_delete_grey600_24dp"/>

                <ImageView
                    android:id="@+id/edit_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/delete_image_view"
                    android:layout_alignTop="@id/delete_image_view"
                    android:layout_toRightOf="@id/delete_image_view"
                    android:onClick="@{phoneCardViewModel.onEditClick}"
                    android:padding="@dimen/phone_item_action_padding"
                    android:src="@drawable/ic_pencil_grey600_24dp"/>

                <ImageView
                    android:id="@+id/sold_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/delete_image_view"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/delete_image_view"
                    android:layout_marginLeft="@dimen/phone_item_action_horizontal_margin"
                    android:layout_marginRight="@dimen/phone_item_action_horizontal_margin"
                    android:onClick="@{phoneCardViewModel.onCheckClick}"
                    android:padding="@dimen/phone_item_action_padding"
                    android:src="@drawable/ic_check_grey600_24dp"
                    android:visibility="@{phoneCardViewModel.phoneSold ? View.INVISIBLE : View.VISIBLE}"/>
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</layout>